@@ -1,10 +1,14 @@
+2007-12-21  Satoshi Nakagawa <artension@gmail.com>
+
+	Moved ISupportInfo into a separated file.
+
 2007-12-20  Satoshi Nakagawa <artension@gmail.com>
 
 	Added "Message scrollback" option.
 
 2007-12-20  Satoshi Nakagawa <artension@gmail.com>
 
-	Improved to avoid nick changing loop when a nick collision occured.
+	Improved to avoid nick changing loop when a nick collision occurred.
 
 2007-12-20  Satoshi Nakagawa <artension@gmail.com>
 
